--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -7,8 +7,8 @@ Logo
 */
 
 .logo {
-  height: 3.25rem;
-  margin-left: 2rem;
+	height: 3.25rem;
+	margin-left: 2rem;
 }
 
 /*
@@ -20,54 +20,54 @@ Search Bar
 */
 
 .search {
-  flex: 0 0 40%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	flex: 0 0 40%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-  &__input {
-    font-family: inherit;
-    font-size: inherit;
-    background-color: var(--color-grey-light-2);
-    border: none;
-    padding: 0.7rem 2rem;
-    border-radius: 100px;
-    width: 90%;
-    transition: all 0.3s;
-    margin-right: -3.25rem;
+	&__input {
+		font-family: inherit;
+		font-size: inherit;
+		background-color: var(--color-grey-light-2);
+		border: none;
+		padding: 0.7rem 2rem;
+		border-radius: 100px;
+		width: 90%;
+		transition: all 0.3s;
+		margin-right: -3.25rem;
 
-    &:focus {
-      outline: none;
-      width: 100%;
-      background-color: var(--color-grey-light-3);
-    }
+		&:focus {
+			outline: none;
+			width: 100%;
+			background-color: var(--color-grey-light-3);
+		}
 
-    &::-webkit-input-placeholder {
-      font-weight: 100;
-      color: var(--color-grey-light-4);
-    }
-  }
+		&::-webkit-input-placeholder {
+			font-weight: 100;
+			color: var(--color-grey-light-4);
+		}
+	}
 
-  &__input:focus + &__button {
-    background-color: var(--color-grey-light-3);
-  }
+	&__input:focus + &__button {
+		background-color: var(--color-grey-light-3);
+	}
 
-  &__button {
-    border: none;
-    background-color: var(--color-grey-light-2);
-    &:focus {
-      outline: none;
-    }
-    &:active {
-      transform: translateY(2px);
-    }
-  }
+	&__button {
+		border: none;
+		background-color: var(--color-grey-light-2);
+		&:focus {
+			outline: none;
+		}
+		&:active {
+			transform: translateY(2px);
+		}
+	}
 
-  &__icon {
-    height: 2.25rem;
-    width: 2.25rem;
-    fill: var(--color-grey-dark-3);
-  }
+	&__icon {
+		height: 2.25rem;
+		width: 2.25rem;
+		fill: var(--color-grey-dark-3);
+	}
 }
 
 /*
@@ -79,51 +79,51 @@ User Navigation
 */
 
 .user-nav {
-  display: flex;
-  align-self: stretch;
+	display: flex;
+	align-self: stretch;
 
-  & > * {
-    padding: 0 2rem;
-    cursor: pointer;
-    height: 100%;
-    display: flex;
-    align-items: center;
-  }
+	& > * {
+		padding: 0 2rem;
+		cursor: pointer;
+		height: 100%;
+		display: flex;
+		align-items: center;
+	}
 
-  & > *:hover {
-    background-color: var(--color-grey-light-2);
-  }
+	& > *:hover {
+		background-color: var(--color-grey-light-2);
+	}
 
-  &__icon-box {
-    position: relative;
-  }
+	&__icon-box {
+		position: relative;
+	}
 
-  &__icon {
-    height: 2.25rem;
-    width: 2.25rem;
-    fill: var(--color-grey-dark-2);
-  }
+	&__icon {
+		height: 2.25rem;
+		width: 2.25rem;
+		fill: var(--color-grey-dark-2);
+	}
 
-  &__user-photo {
-    height: 3.75rem;
-    border-radius: 50%;
-    margin-right: 1rem;
-  }
+	&__user-photo {
+		height: 3.75rem;
+		border-radius: 50%;
+		margin-right: 1rem;
+	}
 
-  &__notification {
-    font-size: 0.8rem;
-    height: 1.75rem;
-    width: 1.75rem;
-    border-radius: 50%;
-    background-color: var(--color-primary);
-    color: #fff;
-    position: absolute;
-    top: 1.5rem;
-    right: 1.1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+	&__notification {
+		font-size: 0.8rem;
+		height: 1.75rem;
+		width: 1.75rem;
+		border-radius: 50%;
+		background-color: var(--color-primary);
+		color: #fff;
+		position: absolute;
+		top: 1.5rem;
+		right: 1.1rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 /*
@@ -135,63 +135,63 @@ Side Navigation
 */
 
 .side-nav {
-  font-size: 1.4rem;
-  list-style: none;
-  margin-top: 3.5rem;
+	font-size: 1.4rem;
+	list-style: none;
+	margin-top: 3.5rem;
 
-  &__item {
-    position: relative;
+	&__item {
+		position: relative;
 
-    &:not(:last-child) {
-      margin-bottom: 0.5rem;
-    }
-  }
+		&:not(:last-child) {
+			margin-bottom: 0.5rem;
+		}
+	}
 
-  &__item::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 3px;
-    background-color: var(--color-primary);
-    transform: scaleY(0);
-    transform-origin: center;
-    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
-      background-color 0.1s;
-  }
+	&__item::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 3px;
+		background-color: var(--color-primary);
+		transform: scaleY(0);
+		transform-origin: center;
+		transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+			background-color 0.1s;
+	}
 
-  &__item:hover::before,
-  &__item--active::before {
-    transform: scaleY(1);
-    width: 100%;
-  }
+	&__item:hover::before,
+	&__item--active::before {
+		transform: scaleY(1);
+		width: 100%;
+	}
 
-  &__item:active::before {
-    background-color: var(--color-primary-light);
-  }
+	&__item:active::before {
+		background-color: var(--color-primary-light);
+	}
 
-  &__link:link,
-  &__link:visited {
-    color: var(--color-grey-light-1);
-    text-decoration: none;
-    text-transform: uppercase;
-    display: inline-block;
-    padding: 1.5rem 3rem;
+	&__link:link,
+	&__link:visited {
+		color: var(--color-grey-light-1);
+		text-decoration: none;
+		text-transform: uppercase;
+		display: inline-block;
+		padding: 1.5rem 3rem;
 
-    display: flex;
-    align-items: center;
+		display: flex;
+		align-items: center;
 
-    z-index: 100;
-    position: relative;
-  }
+		z-index: 100;
+		position: relative;
+	}
 
-  &__icon {
-    width: 1.75rem;
-    height: 1.75rem;
-    fill: currentColor;
-    margin-right: 2rem;
-  }
+	&__icon {
+		width: 1.75rem;
+		height: 1.75rem;
+		fill: currentColor;
+		margin-right: 2rem;
+	}
 }
 
 /*
@@ -203,8 +203,135 @@ Legal Tag
 */
 
 .legal {
-  font-size: 1.2rem;
-  color: var(--color-grey-light-4);
-  text-align: center;
-  padding: 2.5rem;
+	font-size: 1.2rem;
+	color: var(--color-grey-light-4);
+	text-align: center;
+	padding: 2.5rem;
+}
+
+/*
+
+------------------------------------------------------------------------
+Hotel View Gallery
+------------------------------------------------------------------------
+
+*/
+
+.gallery {
+	display: flex;
+	&__photo {
+		width: 100%;
+		display: block;
+	}
+}
+
+/*
+
+------------------------------------------------------------------------
+Hotel Overview
+------------------------------------------------------------------------
+
+*/
+
+.overview {
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid var(--color-grey-light-2);
+
+	&__heading {
+		font-size: 2.25rem;
+		font-weight: 300;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		padding: 1.5rem 3rem;
+	}
+
+	&__stars {
+		margin-right: auto;
+		display: flex;
+	}
+
+	&__icon-star,
+	&__icon-location {
+		width: 1.75rem;
+		height: 1.75rem;
+		fill: var(--color-primary);
+	}
+
+	&__location {
+		font-size: 1.2rem;
+		display: flex;
+		align-items: center;
+	}
+
+	&__icon-location {
+		margin-right: 0.5rem;
+	}
+
+	&__rating {
+		background-color: var(--color-primary);
+		color: #fff;
+		margin-left: 3rem;
+		align-self: stretch;
+		padding: 0 2.25rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	&__rating-count {
+		font-size: 0.8rem;
+		text-transform: uppercase;
+	}
+
+	&__rating-average {
+		font-size: 2.25rem;
+		font-weight: 300;
+		margin-bottom: -3px;
+	}
+}
+
+/*
+
+------------------------------------------------------------------------
+Overview Inline Button
+------------------------------------------------------------------------
+
+*/
+
+.btn-inline {
+	border: none;
+	color: var(--color-primary);
+	font-size: inherit;
+	border-bottom: 1px solid currentColor;
+	padding-bottom: 2px;
+	display: inline-block;
+	background-color: transparent;
+	cursor: pointer;
+	transition: all 0.2s;
+
+	&:hover {
+		color: var(--color-grey-dark-1);
+	}
+
+	&:focus {
+		outline: none;
+		animation: pulsate 1s infinite;
+	}
+}
+
+@keyframes pulsate {
+	0% {
+		transform: scale(1);
+		box-shadow: none;
+	}
+	50% {
+		transform: scale(1.05);
+		box-shadow: 0 1rem 4rem rgba($color: #000000, $alpha: 0.25);
+	}
+	100% {
+		transform: scale(1);
+		box-shadow: none;
+	}
 }
