--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -313,6 +313,15 @@ Overview Inline Button
 
 	&:hover {
 		color: var(--color-grey-dark-1);
+
+		span {
+			margin-left: 12px;
+		}
+	}
+
+	& span {
+		margin-left: 3px;
+		transition: margin-left 0.2s;
 	}
 
 	&:focus {
@@ -423,5 +432,152 @@ Detail Recommend
 		&:not(:last-child) {
 			margin-right: -1.5rem;
 		}
+	}
+}
+
+/*
+
+------------------------------------------------------------------------
+Detail Reviews
+------------------------------------------------------------------------
+
+*/
+
+.review {
+	background-color: #fff;
+	box-shadow: 0 2rem 5rem rgba($color: #000000, $alpha: 0.1);
+	padding: 3rem;
+	margin-bottom: 3.5rem;
+	position: relative;
+	overflow: hidden;
+
+	&__text {
+		margin-bottom: 2rem;
+		z-index: 10;
+		position: relative;
+	}
+
+	&__user {
+		display: flex;
+		align-items: center;
+	}
+	&__photo {
+		height: 4.5rem;
+		width: 4.5rem;
+		border-radius: 50%;
+	}
+	&__user-box {
+		margin-right: auto;
+		margin-left: 1.5rem;
+	}
+	&__user-name {
+		font-weight: 700;
+		text-transform: uppercase;
+		margin-bottom: 0.4rem;
+		font-size: 1.1rem;
+	}
+	&__user-date {
+		font-size: 1rem;
+		color: var(--color-grey-dark-3);
+	}
+	&__rating {
+		font-size: 2rem;
+		color: var(--color-primary);
+		font-weight: 300;
+	}
+
+	&::before {
+		content: '\201C';
+		position: absolute;
+		top: -2.75rem;
+		left: -1rem;
+		font-size: 20rem;
+		color: var(--color-grey-light-2);
+		line-height: 1;
+		font-family: sans-serif;
+		z-index: 1;
+	}
+}
+
+/*
+
+------------------------------------------------------------------------
+Call to Action Text
+------------------------------------------------------------------------
+
+*/
+
+.cta {
+	padding: 3.5rem 0;
+	text-align: center;
+
+	&__book-now {
+		text-transform: uppercase;
+		font-size: 2rem;
+		font-weight: 300;
+		margin-bottom: 2.5rem;
+	}
+}
+
+/*
+
+------------------------------------------------------------------------
+Call to Action Button
+------------------------------------------------------------------------
+
+*/
+
+.btn {
+	font-size: 1.5rem;
+	border: none;
+	font-weight: 300;
+	text-transform: uppercase;
+	border-radius: 100px;
+	background-image: linear-gradient(
+		to right,
+		var(--color-primary-light),
+		var(--color-primary-dark)
+	);
+	color: white;
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+
+	& > * {
+		display: inline-block;
+		width: 100%;
+		height: 100%;
+		transition: all 0.3s;
+	}
+	&:focus {
+		outline: none;
+		animation: pulsate 1s infinite;
+	}
+
+	&:hover &__visible {
+		transform: translateY(100%);
+	}
+
+	&:hover &__invisible {
+		top: 0;
+	}
+
+	&:hover {
+		background-image: linear-gradient(
+			to left,
+			var(--color-primary-light),
+			var(--color-primary-dark)
+		);
+	}
+
+	&__visible {
+		padding: 2rem 7.5rem;
+	}
+
+	&__invisible {
+		position: absolute;
+		left: 0;
+		top: -100%;
+		padding: 2rem 0;
 	}
 }
