--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -36,6 +36,7 @@
 }
 
 .detail {
+	font-size: 1.4rem;
 	display: flex;
 	padding: 4.5rem;
 	background-color: var(--color-grey-light-1);
@@ -43,7 +44,6 @@
 }
 
 .description {
-	font-size: 1.4rem;
 	background-color: #fff;
 	box-shadow: 0 2rem 5rem rgba($color: #000000, $alpha: 0.1);
 	padding: 3rem;
@@ -52,6 +52,8 @@
 }
 
 .user-reviews {
-	background-color: yellowgreen;
 	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
