--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -25,6 +25,12 @@ Search Bar
 	align-items: center;
 	justify-content: center;
 
+	@media only screen and (max-width: $bp-smallest) {
+		order: 1;
+		flex: 0 0 100%;
+		background-color: var(--color-grey-light-2);
+	}
+
 	&__input {
 		font-family: inherit;
 		font-size: inherit;
@@ -139,11 +145,23 @@ Side Navigation
 	list-style: none;
 	margin-top: 3.5rem;
 
+	@media only screen and (max-width: $bp-medium) {
+		display: flex;
+		margin: 0;
+	}
+
 	&__item {
 		position: relative;
 
 		&:not(:last-child) {
 			margin-bottom: 0.5rem;
+			@media only screen and (max-width: $bp-medium) {
+				margin: 0;
+			}
+		}
+
+		@media only screen and (max-width: $bp-medium) {
+			flex: 1;
 		}
 	}
 
@@ -184,6 +202,16 @@ Side Navigation
 
 		z-index: 100;
 		position: relative;
+
+		@media only screen and (max-width: $bp-medium) {
+			justify-content: center;
+			padding: 2rem;
+		}
+
+		@media only screen and (max-width: $bp-small) {
+			flex-direction: column;
+			padding: 1.5rem 0.5rem;
+		}
 	}
 
 	&__icon {
@@ -191,6 +219,12 @@ Side Navigation
 		height: 1.75rem;
 		fill: currentColor;
 		margin-right: 2rem;
+		@media only screen and (max-width: $bp-small) {
+			margin-right: 0;
+			width: 1.5rem;
+			height: 1.5rem;
+			margin-bottom: 0.5rem;
+		}
 	}
 }
 
@@ -207,6 +241,9 @@ Legal Tag
 	color: var(--color-grey-light-4);
 	text-align: center;
 	padding: 2.5rem;
+	@media only screen and (max-width: $bp-medium) {
+		display: none;
+	}
 }
 
 /*
@@ -244,6 +281,11 @@ Hotel Overview
 		text-transform: uppercase;
 		letter-spacing: 1px;
 		padding: 1.5rem 3rem;
+
+		@media only screen and (max-width: $bp-small) {
+			font-size: 1.8rem;
+			padding: 1.25rem 2rem;
+		}
 	}
 
 	&__stars {
@@ -278,17 +320,27 @@ Hotel Overview
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+
+		@media only screen and (max-width: $bp-small) {
+			padding: 0 1.5rem;
+		}
 	}
 
 	&__rating-count {
 		font-size: 0.8rem;
 		text-transform: uppercase;
+		@media only screen and (max-width: $bp-small) {
+			font-size: 0.6rem;
+		}
 	}
 
 	&__rating-average {
 		font-size: 2.25rem;
 		font-weight: 300;
 		margin-bottom: -3px;
+		@media only screen and (max-width: $bp-small) {
+			font-size: 1.8rem;
+		}
 	}
 }
 
@@ -388,15 +440,18 @@ Detail List
 		margin-right: 0.7rem;
 
 		// ---------- for older browsers -----------
-		// background-image: url(../img/chevron-thin-right.svg);
-		// background-size: cover;
+		background-image: url(../img/chevron-thin-right.svg);
+		background-size: cover;
 
 		// ---------- Newer browser - masks
-		background-color: var(--color-primary);
-		mask-image: url(../img/chevron-thin-right.svg);
-		mask-size: cover;
-		-webkit-mask-image: url(../img/chevron-thin-right.svg);
-		-webkit-mask-size: cover;
+		@supports (-webkit-mask-image: url()) or (mask-image: url()) {
+			background-color: var(--color-primary);
+			mask-image: url(../img/chevron-thin-right.svg);
+			mask-size: cover;
+			-webkit-mask-image: url(../img/chevron-thin-right.svg);
+			-webkit-mask-size: cover;
+			background-image: none;
+		}
 	}
 }
 
@@ -420,6 +475,7 @@ Detail Recommend
 	}
 
 	&__friends {
+		display: flex;
 	}
 
 	&__photo {
@@ -430,7 +486,7 @@ Detail Recommend
 		border: 3px solid #fff;
 
 		&:not(:last-child) {
-			margin-right: -1.5rem;
+			margin-right: -2rem;
 		}
 	}
 }
@@ -450,6 +506,11 @@ Detail Reviews
 	margin-bottom: 3.5rem;
 	position: relative;
 	overflow: hidden;
+
+	@media only screen and (max-width: $bp-medium) {
+		padding: 2rem;
+		margin-bottom: 3rem;
+	}
 
 	&__text {
 		margin-bottom: 2rem;
@@ -516,6 +577,10 @@ Call to Action Text
 		font-size: 2rem;
 		font-weight: 300;
 		margin-bottom: 2.5rem;
+	}
+
+	@media only screen and (max-width: $bp-medium) {
+		padding: 2.5rem 0;
 	}
 }
 
