--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,6 +16,12 @@
 	--shadow-light: 0 2rem 5rem rgba($color: #000000, $alpha: 0.1);
 }
 
+$bp-largest: 75em;
+$bp-large: 68.75em;
+$bp-medium: 56.25em;
+$bp-small: 37.5em;
+$bp-smallest: 31.25em;
+
 * {
 	margin: 0;
 	padding: 0;
@@ -30,6 +36,9 @@
 html {
 	box-sizing: border-box;
 	font-size: 62.5%;
+	@media only screen and (max-width: $bp-large) {
+		font-size: 50%;
+	}
 }
 
 body {
